external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_extra_comma.move
module 0x42::M {
    struct S<,T> { } // Test a comma before the first type parameter
}
